# y2q

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Dockerfile  Makefile  README.md  config.default.toml  config.toml  manifest  repomix-output.xml
.claude/: settings.json
.github/workflows/: post-merge.yml  pr-checks.yml  release.yml  security-audit.yml
crates/pqstor/: Cargo.toml
crates/pqstor-core/: Cargo.toml
crates/pqstor-core/src/storage/: filesystem.rs
crates/y2q/: Cargo.toml
crates/y2q-behavior/: Cargo.toml
crates/y2q-behavior/src/: crypto.rs  index.rs  io.rs  lib.rs  storage.rs
crates/y2q-cli/: Cargo.toml
crates/y2q-cli/src/: cli.rs  client_builder.rs  config.rs  error.rs  main.rs  output.rs  path.rs  stubs.rs  token.rs
crates/y2q-cli/src/cmd/: acl.rs  admin.rs  alias.rs  auth.rs  bucket.rs  bucketcfg.rs  completions.rs  config.rs  cp.rs  diff.rs  du.rs  find.rs  head.rs  health.rs  listing.rs  mirror.rs  mod.rs  mv.rs  objects.rs  pipe.rs  search.rs  stub.rs  tag.rs  tree.rs  users.rs  watch.rs
crates/y2q-cli/src/ops/: admin.rs  auth.rs  buckets.rs  health.rs  listing.rs  mod.rs  objects.rs
crates/y2q-cli/src/progress/: mod.rs  plain.rs  tui.rs
crates/y2q-cli/src/tui/: actions.rs  app.rs  events.rs  mod.rs  state.rs  theme.rs  ui.rs
crates/y2q-cli/src/tui/admin/: mod.rs  users.rs
crates/y2q-cli/src/tui/pane/: local.rs  mod.rs  remote.rs
crates/y2q-cli/src/tui/widgets/: confirm_dialog.rs  keybindings_bar.rs  mod.rs  throbber.rs  transfer_bar.rs
crates/y2q-cli/tests/: cluster_e2e.rs  e2e.rs  stubs.rs
crates/y2q-client/: Cargo.toml
crates/y2q-client/src/: error.rs  lib.rs  model.rs
crates/y2q-client/src/client/: admin.rs  auth.rs  listing.rs  mod.rs  objects.rs  trace.rs  users.rs
crates/y2q-cluster/: Cargo.toml
crates/y2q-cluster/src/: identity.rs  lib.rs
crates/y2q-cluster/src/control/: controller.rs  mod.rs  raft_impl.rs  store.rs  types.rs
crates/y2q-cluster/src/data/: mod.rs  pending.rs  route.rs  wire.rs
crates/y2q-cluster/src/hashing/: chain.rs  mod.rs  ring.rs
crates/y2q-cluster/src/transport/: internal_client.rs  mod.rs  raft_network.rs
crates/y2q-config/: Cargo.toml
crates/y2q-config/src/: config.rs  error.rs  lib.rs  token.rs
crates/y2q-core/: Cargo.toml
crates/y2q-core/benches/: crypto.rs  index.rs  storage.rs
crates/y2q-core/src/: checksum.rs  lib.rs
crates/y2q-core/src/crypto/: envelope.rs  kdf.rs  keys.rs  keystore.rs  metadata_key.rs  mod.rs  user_store.rs
crates/y2q-core/src/query/: grammar.pest  mod.rs
crates/y2q-core/src/storage/: any.rs  bufpool.rs  encrypted_backend.rs  filesystem.rs  format.rs  index.rs  locks.rs  mod.rs  streaming_sink.rs
crates/y2q-core/src/storage/uring/: buffer.rs  format.rs  mod.rs  ops.rs  runtime.rs  storage.rs  streaming.rs
crates/y2q-fuse/: Cargo.toml
crates/y2q-fuse/src/: auth.rs  error.rs  fs.rs  inode.rs  lib.rs  main.rs  mount.rs
crates/y2q-gui/: Cargo.toml  build.rs
crates/y2q-gui/src/: app.rs  assets.rs  events.rs  main.rs  mount_backend.rs  tray.rs
crates/y2q-mount-core/: Cargo.toml
crates/y2q-mount-core/src/: client.rs  dir.rs  error.rs  lib.rs  path.rs
crates/y2q-mount-windows/: Cargo.toml  build.rs
crates/y2q-mount-windows/src/: context.rs  error.rs  lib.rs  main.rs  mount.rs
crates/y2q-warp/: Cargo.toml
crates/y2q-warp/src/: analyze.rs  auth.rs  cli.rs  config.rs  display.rs  error.rs  generator.rs  main.rs  metrics.rs  prepare.rs  recorder.rs  worker.rs
crates/y2q-warp/src/ops/: delete.rs  get.rs  list.rs  mod.rs  put.rs  stat.rs
crates/y2q/src/: main.rs
crates/y2qd/: Cargo.toml
crates/y2qd/src/: authz.rs  cipher.rs  cli.rs  cluster.rs  config.rs  error.rs  main.rs  observability.rs  rate_limit.rs  request_id.rs  span.rs  tls.rs  trace.rs
crates/y2qd/src/auth/: error.rs  handlers.rs  keystore.rs  mod.rs  session.rs  state.rs  users.rs
crates/y2qd/src/handlers/: acl.rs  buckets.rs  delete.rs  get.rs  head.rs  labels.rs  list_buckets.rs  list_objects.rs  locks.rs  metrics.rs  mod.rs  put.rs  rebuild.rs  search.rs  tags.rs
deploy/: y2qd.service
deploy/cluster/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: api.md  architecture.md  clustering.md  configuration.md  operations.md  search.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_docs_uncached.txt  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: lib.rs
