[workspace]
members = [
    "crates/y2q-core",
    "crates/y2qd",
]
resolver = "2"

[workspace.dependencies]
actix-web                   = "4"
aligned-vec                 = "0.6"
async-channel               = "2"
base64                      = "0.22"
crc32fast                   = "1.4"
criterion                   = { version = "0.5", features = ["async_tokio"] }
libc                        = "0.2"
utoipa                      = "5"
utoipa-swagger-ui           = { version = "9", features = ["actix-web"] }
bytes                       = { version = "1.11.1", features = ["serde"] }
figment                     = { version = "0.10.19", features = ["toml", "env"] }
md-5                        = "0.10"
metrics                     = "0.24"
metrics-exporter-prometheus = "0.17"
metrics-rs-dashboard-actix  = "0.1"
pqcrypto                    = { version = "0.18.1", features = ["serialization"] }
redb                        = "4.1.0"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
sha2                        = "0.10"
thiserror                   = "2.0.18"
tokio                       = { version = "1.52.3", features = ["full"] }
tokio-uring                 = "0.5"
tracing                     = "0.1.44"
tracing-actix-web           = "0.7"
tracing-subscriber          = { version = "0.3", features = ["env-filter"] }
uuid                        = { version = "1", features = ["v5"] }
clap                        = { version = "4", features = ["derive"] }
tempfile                    = "3"
