[workspace]
members = [
    "crates/y2q-behavior",
    "crates/y2q-cli",
    "crates/y2q-client",
    "crates/y2q-cluster",
    "crates/y2q-config",
    "crates/y2q-core",
    "crates/y2q-warp",
    "crates/y2qd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
actix-web                   = "4"
aead                        = { version = "0.5", features = ["bytes"] }
aes-gcm                     = "0.10"
aligned-vec                 = "0.6"
argon2                      = "0.5"
async-channel               = "2"
async-trait                 = "0.1"
base64                      = "0.22"
bytes                       = { version = "1.11.1", features = ["serde"] }
chrono                      = "0.4"
clap                        = { version = "4", features = ["derive", "env"] }
crc32fast                   = "1.4"
criterion                   = { version = "0.5", features = ["async_tokio"] }
crossterm                   = { version = "0.28", features = ["event-stream"] }
csv                         = "1.3"
dashmap                     = "6"
directories                 = "5"
figment                     = { version = "0.10.19", features = ["toml", "env"] }
flume                       = "0.12"
fs2                         = "0.4"
futures                     = "0.3"
hdrhistogram                = "7"
hkdf                        = "0.12"
hmac                        = "0.12"
humantime                   = "2"
indexmap                    = { version = "2", features = ["serde"] }
libc                        = "0.2"
metrics                     = "0.24"
metrics-exporter-prometheus = "0.17"
openraft                    = { version = "0.9", features = ["serde", "storage-v2"] }
metrics-rs-dashboard-actix  = "0.1"
papaya                      = "0.1"
pest                        = "2"
pest_derive                 = "2"
pqcrypto                    = { version = "0.18.1", features = ["serialization"] }
pqcrypto-traits             = "0.3.5"
rand                        = "0.8"
ratatui                     = { version = "0.30", features = ["crossterm"] }
redb                        = "4.1.0"
regex                       = "1"
reqwest                     = { version = "0.12", features = ["json", "stream", "rustls-tls-no-provider"], default-features = false }
rpassword                   = "7"
rustls                      = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "tls12", "std", "prefer-post-quantum"] }
rustls-pemfile              = "2"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
sha2                        = "0.10"
subtle                      = "2"
tempfile                    = "3"
thiserror                   = "2.0.18"
throbber-widgets-tui        = "0.8"
tokio                       = { version = "1.52.3", features = ["full"] }
tokio-uring                 = "0.5"
tokio-util                  = { version = "0.7", features = ["io", "codec"] }
toml                        = "0.8"
tracing                     = "0.1.44"
tracing-actix-web           = "0.7"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
utoipa                      = "5"
utoipa-swagger-ui           = { version = "9", features = ["actix-web"] }
uuid                        = { version = "1", features = ["v4", "v5"] }
webpki-roots                = "0.26"
xxhash-rust                 = { version = "0.8", features = ["xxh3"] }
zeroize                     = { version = "1", features = ["derive"] }
zstd                        = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
