[package]
name = "pqstor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes     = { workspace = true }
md-5      = { workspace = true }
pqcrypto  = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
