[package]
name = "y2q-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "y2q"
path = "src/main.rs"

[dependencies]
y2q-client          = { path = "../y2q-client" }
y2q-config          = { path = "../y2q-config" }
clap                = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
figment             = { workspace = true }
rpassword           = { workspace = true }
directories         = { workspace = true }
indexmap            = { workspace = true }
chrono              = { workspace = true }
ratatui             = { workspace = true }
crossterm           = { workspace = true }
futures             = { workspace = true }
throbber-widgets-tui = { workspace = true }
bytes               = { workspace = true }
toml                = { workspace = true }
zeroize             = { workspace = true }
clap_complete       = "4"
walkdir             = "2"
glob                = "0.3"
