[package]
name = "y2q-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "y2q"
path = "src/main.rs"

[dependencies]
bytes               = { workspace = true }
chrono              = { workspace = true }
clap                = { workspace = true }
clap_complete       = "4"
crossterm           = { workspace = true }
directories         = { workspace = true }
figment             = { workspace = true }
futures             = { workspace = true }
glob                = "0.3"
indexmap            = { workspace = true }
ratatui             = { workspace = true }
rpassword           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
throbber-widgets-tui = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
walkdir             = "2"
y2q-client          = { path = "../y2q-client" }
y2q-config          = { path = "../y2q-config" }
zeroize             = { workspace = true }
