[package]
name = "y2q-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes      = { workspace = true }
futures    = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
tracing    = { workspace = true }
zeroize    = { workspace = true }
