[package]
name = "y2q-client"
version.workspace = true
edition = "2024"

[dependencies]
bytes          = { workspace = true }
futures        = { workspace = true }
reqwest        = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-util     = { workspace = true }
tracing        = { workspace = true }
webpki-roots   = { workspace = true }
zeroize        = { workspace = true }
