[package]
name = "y2q-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
gxhash      = { workspace = true }
openraft    = { workspace = true }
rand        = { workspace = true }
redb        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
