[package]
name = "y2q-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes          = { workspace = true }
dashmap        = { workspace = true }
futures        = { workspace = true }
gxhash         = { workspace = true }
openraft       = { workspace = true }
rand           = { workspace = true }
redb           = { workspace = true }
reqwest        = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
webpki-roots   = { workspace = true }
y2q-core       = { path = "../y2q-core" }
zeroize        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
