[package]
name = "y2q-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64     = { workspace = true }
bytes      = { workspace = true }
md-5       = { workspace = true }
pqcrypto   = { workspace = true }
redb       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

# Linux-only fast-path deps; pulled in by the `uring` feature.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring   = { workspace = true, optional = true }
aligned-vec   = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
crc32fast     = { workspace = true, optional = true }

[features]
default = []
# Enables the io_uring-based UringStorage backend. Linux-only at runtime:
# the module is `#[cfg(target_os = "linux")]`, so on other targets the
# feature is accepted but contributes nothing.
uring = ["dep:tokio-uring", "dep:aligned-vec", "dep:async-channel", "dep:crc32fast"]

[dev-dependencies]
tempfile = { workspace = true }
