[package]
name = "y2q-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aead            = { workspace = true }
aes-gcm         = { workspace = true }
argon2          = { workspace = true }
base64          = { workspace = true }
bytes           = { workspace = true }
crc32fast       = { workspace = true }
flume           = { workspace = true }
fs2             = { workspace = true }
hkdf            = { workspace = true }
hmac            = { workspace = true }
metrics         = { workspace = true }
papaya          = { workspace = true }
pest            = { workspace = true }
pest_derive     = { workspace = true }
pqcrypto        = { workspace = true }
pqcrypto-traits = { workspace = true }
rand            = { workspace = true }
redb            = { workspace = true }
regex           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
subtle          = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
xxhash-rust     = { workspace = true }
zeroize         = { workspace = true }

# Linux-only fast-path deps for the io_uring storage backend. Always compiled
# on Linux; absent on other targets, where `UringStorage` does not exist and
# selecting it at runtime returns an error.
[target.'cfg(target_os = "linux")'.dependencies]
aligned-vec   = { workspace = true }
async-channel = { workspace = true }
libc          = { workspace = true }
tokio-uring   = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile  = { workspace = true }

[[bench]]
name    = "storage"
harness = false

[[bench]]
name    = "crypto"
harness = false

[[bench]]
name    = "index"
harness = false
