[package]
name = "y2q-fuse"
version.workspace = true
edition = "2024"

[[bin]]
name = "y2q-fuse"
path = "src/main.rs"

[dependencies]
clap        = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
y2q-client      = { path = "../y2q-client" }
y2q-mount-core  = { path = "../y2q-mount-core" }

# fuser wraps libfuse (Linux) / macFUSE (macOS); it has no Windows backend.
[target.'cfg(unix)'.dependencies]
fuser = "0.17"
libc  = { workspace = true }
