[package]
name = "y2q-fuse"
version.workspace = true
edition = "2024"

[[bin]]
name = "y2q-fuse"
path = "src/main.rs"

[dependencies]
clap        = { workspace = true }
libc        = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize     = { workspace = true }
y2q-client  = { path = "../y2q-client" }
y2q-config  = { path = "../y2q-config" }
fuser       = "0.17"

[dev-dependencies]
rustls = { workspace = true }
