[package]
name = "y2q-mount-core"
version.workspace = true
edition = "2024"

[dependencies]
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
zeroize    = { workspace = true }
y2q-client = { path = "../y2q-client" }
y2q-config = { path = "../y2q-config" }
