[package]
name = "y2q-warp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "y2q-warp"
path = "src/main.rs"

[dependencies]
y2q-client      = { path = "../y2q-client" }
y2q-config      = { path = "../y2q-config" }
clap            = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest         = { workspace = true }
futures         = { workspace = true }
bytes           = { workspace = true }
zeroize         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
rand            = { workspace = true }
crossterm       = { workspace = true }
ratatui         = { workspace = true }
hdrhistogram    = { workspace = true }
zstd            = { workspace = true }
csv             = { workspace = true }
humantime       = { workspace = true }
