[package]
name = "y2q-warp"
version.workspace = true
edition = "2024"

[[bin]]
name = "y2q-warp"
path = "src/main.rs"

[dependencies]
bytes           = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
crossterm       = { workspace = true }
csv             = { workspace = true }
futures         = { workspace = true }
hdrhistogram    = { workspace = true }
humantime       = { workspace = true }
rand            = { workspace = true }
ratatui         = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
y2q-client      = { path = "../y2q-client" }
y2q-config      = { path = "../y2q-config" }
zeroize         = { workspace = true }
zstd            = { workspace = true }
